# similarity_modularity

./: .gitignore  11.py  Makefile  Weighted_Louvain_Prune.py  analyze_datasets.py  backup.cpp  backup_pruning.hpp  compare_with_library.py  dataset_statistics.csv  defines.hpp  graph.hpp  graph_0701_before_checkDisSqr.hpp  graph_visualization.ipynb  heur.hpp  leiden.hpp  louvain.hpp  louvain_heur.hpp  louvain_heur_withHeap.hpp  louvain_plus.hpp  louvain_pp.hpp  louvain_pruning.hpp  main.cpp  naive_weighted_louvain.py  pure-louvain.hpp  pure_louvain.hpp  remove_self_loops.sh  run.py  run.sh  test_trial.hpp  test_trial.py  testfile.py  testhypersphere.cpp  tree_search.py  tree_search_test.py  visualize_r.py  visualize_results.py  weighed_leiden.py
cpp/: CMakeLists.txt  Makefile  defines.hpp  graph.hpp  leiden.hpp  louvain.hpp  main.cpp  run.py  test.cpp  testgauss.cpp  visualize_results.py
cpp/dataset/simple/: edges.txt
data/: synthetic.ipynb
dataset/: download.py
docs/: FAST_CLUSTERING.md  FAST_CLUSTERING_LIB.md  METHODS_AND_USAGE_CN.md
experiment/: FRAMEWORK_COMPLETE.md  bigvaryr_config.toml  experiment_config.json  experiment_config.server.toml  experiment_config.toml  experiment_framework.py  run_simple_experiments.py  run_varyr.sh  varyr_config.toml
pruning_alg/: bipolar_pruning.cpp  bipolar_pruning.hpp  fast_clustering_lib.cpp  fast_clustering_lib.hpp  kmeans_preprocessing.cpp  kmeans_preprocessing.hpp  s0_fast_kmeans.cpp  s0_fast_kmeans.hpp  s1_autok_lite.cpp  s1_autok_lite.hpp  triangle_pruning.cpp  triangle_pruning.hpp
python/: Weighted_Louvain_Prune.py  (+7 more)
(+7 files in other folders)
